[package]
name = "boost"
description = "Run if inputs have changed, otherwise use cache"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/stuartharris/boost"
authors = ["stuart.harris@red-badger.com"]
rust-version = "1.56.1" # MSRV
categories = ["command-line-interface", "ci-tooling"]
keywords = ["cli", "ci", "cache", "task"]

[dependencies]
anyhow = "1.0.58"
b2sum-rs = "0.1.1"
clap = { version = "3.2.12", features = ["derive"] }
globset = "0.4.9"
ignore = "0.4.18"
serde = { version = "1.0.139", features = ["derive"] }
toml = "0.5.9"
