[package]
name = "boost"
description = "Run tasks if their inputs have changed, otherwise restore their outputs from cache"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/stuartharris/boost"
authors = ["stuart.harris@red-badger.com"]
rust-version = "1.56.1" # MSRV
categories = ["command-line-interface", "ci-tooling"]
keywords = ["cli", "ci", "cache", "task"]

[dependencies]
atty = "0.2.14"
b2sum-rs = "0.1.1"
bevy_app = "0.8.0"
bevy_core = "0.8.0"
bevy_ecs = "0.8.0"
bevy_hierarchy = "0.8.0"
bevy_internal = "0.8.0"
bevy_tasks = "0.8.0"
bevy_time = "0.8.0"
bevy_utils = "0.8.0"
bytesize = "1.1.0"
clap = { version = "3.2.17", features = ["derive"] }
color-eyre = "0.6.2"
futures-lite = "1.12.0"
globset = "0.4.9"
ignore = "0.4.18"
lazy_static = "1.4.0"
libc = "0.2.132"
log = "0.4.17"
once_cell = "1.13.1"
sensible-env-logger = { version = "0.3.1", features = ["local-time"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.83"
strip-ansi-escapes = "0.1.1"
tabled = { version = "0.8.0", features = ["color"] }
tar = "0.4.38"
tokio = { version = "1.20.1", features = ["full"] }
tokio-fd = "0.3.0"
toml = "0.5.9"
yansi = "0.5.1"

[profile.dev.package.backtrace]
opt-level = 3
